--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "ember-cli-babel": "^5.1.6"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "versionCompatibility": {
+      "ember": "> 2.5.0"
+    }
   }
 }
